src/test/deca/syntax/invalid/obtained_res/InstIncompletesynt.res
./src/test/deca/syntax/invalid/created/testInst/InstIncomplete.deca:9:12: missing ')' at ';'
